<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/homeItemFileNameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/homeItemFileId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fileName"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/homeItemFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/homeItemFileTypeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/homeItemFileNameLayout"
        android:layout_marginLeft="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fileType"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/homeItemFileType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/homeItemFileDescLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/homeItemFileTypeLayout"
        android:layout_marginLeft="5dp" >

        <TextView
            android:id="@+id/homeItemDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fileDesc"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/homeItemDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/homeBottomLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/homeItemFileDescLayout" >

        <Button
            android:id="@+id/homeItemDownload"
            style="@style/ItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/download" />

        <Button
            android:id="@+id/homeItemSupport"
            style="@style/ItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/support" />

        <Button
            android:id="@+id/homeItemRecommend"
            style="@style/ItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/recommend" />
    </LinearLayout>

</RelativeLayout>