<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:typeface="serif"
    tools:context="cn.edu.zucc.zql.teachingmaterialmanager.ModifyFileActivity" >

    <include layout="@layout/commom_title"/>
    
    <LinearLayout 
        android:id="@+id/modifyFilenameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="#000"
            android:text="@string/fileName"/>
        <TextView 
            android:id="@+id/modifyFilename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"/>
    </LinearLayout>
        <LinearLayout 
        android:id="@+id/modifyFiletypeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modifyFilenameLayout"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        >
        <TextView 
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/fileType"
            android:textColor="#000"/>
        <Spinner 
            android:id="@+id/modifyFiletype"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/fileTypes"/>
    </LinearLayout>
 <LinearLayout 
        android:id="@+id/modifyFiledescLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modifyFiletypeLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/fileDesc"/>
        <EditText 
            android:id="@+id/modifyFiledesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lines="3"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_below="@id/modifyFiledescLayout">
        <Button 
            android:id="@+id/modifyFileConfirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomButton"
            android:text="@string/confirm"/>
    </LinearLayout>
</RelativeLayout>
