<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/managerTopLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp" >

        <TextView 
                android:id="@+id/managerItemFileId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fileName"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/managerItemFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/managerFileTypeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/managerTopLayout"
        android:layout_marginLeft="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fileType"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/managerItemFileType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/managerItemDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/managerFileTypeLayout"
        android:text="@string/fileDesc"
        android:layout_marginLeft="5dp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/managerItemDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/managerFileTypeLayout"
        android:layout_toRightOf="@id/managerItemDescriptionText"
        android:textColor="#000000" />


</RelativeLayout>