<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:typeface="serif"
    tools:context="cn.edu.zucc.zql.teachingmaterialmanager.SystemRegisterActivity" >

    <include layout="@layout/commom_title" />

    <LinearLayout
        android:id="@+id/systemUserNameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textColor="#000" />

        <EditText
            android:id="@+id/systemUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/systemUserPassword1Layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/systemUserNameLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#000" />

        <EditText
            android:id="@+id/systemUserPassword1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/systemUserPassword2Layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/systemUserPassword1Layout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#000" />

        <EditText
            android:id="@+id/systemUserPassword2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/systemUserLevelLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/systemUserPassword2Layout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/userLevel"
            android:textColor="#000" />

        <Spinner
            android:id="@+id/systemUserLevel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/level"
            style="@style/spinner_style" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/systemUserButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/systemUserLevelLayout"
        android:layout_marginTop="30dp"
        android:gravity="center" >

        <Button
            android:id="@+id/systemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomButton"
            android:text="@string/confirm" />
    </LinearLayout>

</RelativeLayout>